css/style.css
/* ... */
@media not all and (min-resolution: 0.001dpcm) {  /* Safari only */
    .popup {
        /*left:50%;*/
        /*margin-left:-25vw;*/
        /*margin-top:-25vw;*/
        position:fixed;
        /*top:50%;*/
    }
    .popup.arrow:before {
        display: none!important;
    }
}
.popup.arrow:before {
    content:'';
    display:block;
    width:0;
    height:0;
    position:absolute;
}
.popup.arrow.down:before{
    bottom: -8px;
    border-left: 8px solid transparent;
    border-right: 8px solid transparent;
    border-top: 8px solid var(--light-color);
    left:50%;
    transform: translateX(-50%);
}
.popup.arrow.up:before{
    top: -8px;
    border-left: 8px solid transparent;
    border-right: 8px solid transparent;
    border-bottom: 8px solid var(--light-color);
    left:50%;
    transform: translateX(-50%);
}
.popup.arrow.left:before{
    bottom: 50%;
    border-bottom: 8px solid transparent;
    border-top: 8px solid transparent;
    border-right: 8px solid var(--light-color);
    right:100%;
    transform: translateY(-50%);
}
.popup.arrow.right:before{
    bottom: 50%;
    border-bottom: 8px solid transparent;
    border-top: 8px solid transparent;
    border-left: 8px solid var(--light-color);
    left:100%;
    transform: translateY(-50%);
}
.popup .btn {
    display: inline-block;
    font-weight: 600;
    padding: .5rem 1rem;
    text-align: center;
    text-transform: uppercase;
}
.popup .caption .buttons li:nth-of-type(1) .btn {
    background: var(--accent-color);
    border-color:transparent!important;
    color:var(--light-color);
}
/*.popup .caption .buttons li:nth-of-type(1) .btn:hover {*/
/*    background: var(--accent-hover-color);*/
/*    color:var(--light-color);*/
/*}*/
/*.popup .caption .buttons li:nth-of-type(2) .btn {*/
/*    color: var(--green-color);*/
/*}*/
.popup .caption .buttons li:nth-of-type(2) .btn {
    background: var(--green-color);
    color:var(--light-color);
}
/*.popup .caption .buttons li:nth-of-type(3) .btn {*/
/*    color: var(--blue-color);*/
/*}*/
.popup .caption .buttons li:nth-of-type(3) .btn {
    background: var(--blue-color);
    color: var(--light-color);
}
/*.popup .caption .buttons li:nth-of-type(4) .btn {*/
/*    color: var(--orange-color);*/
/*}*/
.popup .caption .buttons li:nth-of-type(4) .btn {
    background: var(--orange-color);
    color:var(--light-color);
}
/*.popup .caption .buttons li:nth-of-type(5) .btn {*/
/*    color: var(--purple-color);*/
/*}*/
.popup .caption .buttons li:nth-of-type(5) .btn {
    background: var(--purple-color);
    color:var(--light-color);
}
.popup .caption {
    display: none;
    padding: 15px;
}
.popup .caption .buttons {
    display: none;
    list-style-type: none;
    padding: 0;
    margin: 0;
}
.popup .caption .buttons .btn {
    border: 2px solid var(--light-gray-color);
    display: block;
    font-weight: 900;
    margin-top:.5rem;
}
.popup .caption .buttons .btn:hover {
    border-color:transparent;
}
.popup .caption .buttons .btn ~ .btn {
    margin-top:.5rem;
}
.popup .caption .caption-title {
    font-family: var(--secondary-font);
    font-size: 1.25rem;
}
.popup .caption .caption-text {
    color: var(--dark-gray-color);
    display: none;
    font-size: .75rem;
    padding: .5rem 0;
}
.popup .close {
    align-items: center;
    background: var(--accent-color);
    box-shadow: inset 0 0 0 2px var(--light-gray-color);
    border-radius: 50%;
    color:var(--light-gray-color);
    display: flex;
    font-size: 2.5rem;
    font-weight: bold;
    height: 2.75rem;
    line-height: 2.75rem;
    justify-content: center;
    opacity: 1!important;
    position: absolute;
    right: -20px;
    text-align: center;
    text-decoration: none;
    top: -20px;
    width: 2.75rem;
    z-index: 1;
}
.popup .close:hover {
    background: var(--accent-hover-color);
}
.popup img {
    display: block;
    height: auto;
    width: 100%;
}
.thankyou_message {
    height:100%;
    left:0;
    /*opacity:0;*/
    position:fixed;
    top:60px;
    visibility: hidden;
    width: var(--aside-panel-width);
    z-index: 1;
}
.thankyou_message h6 {
    line-height: 1.5;
    margin-bottom: 1.5rem;
}
.thankyou_message.sent {
    visibility: visible;
    /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
    However, delay the fade out process for 3 seconds */
    -webkit-animation: fadein 0.5s, fadeout 0.5s 3s;
    animation: fadein 0.5s, fadeout 0.5s 3s;
}
/* Animations to fade the thankyou_message in and out */
@-webkit-keyframes fadein {
    from {top: 0; opacity: 0;}
    to {top: 60px; opacity: 1;}
}
@keyframes fadein {
    from {top: 0; opacity: 0;}
    to {top: 60px; opacity: 1;}
}
@-webkit-keyframes fadeout {
    from {top: 60px; opacity: 1;}
    to {top: 0; opacity: 0;}
}
@keyframes fadeout {
    from {top: 60px; opacity: 1;}
    to {top: 0; opacity: 0;}
}
/* End animations to fade the thankyou_message in and out */
.selectpicker + .btn {
    border:1px solid var(--gray-color);
}
svg {
    height:100%;
    width:auto;
}
@media not all and (min-resolution: 0.001dpcm) { /* Safari only */
    svg {
        min-width:100%;
    }
}
svg > a polygon {
    stroke: var(--gray-color);
    stroke-width: 2;
    stroke-linejoin: round;
    stroke-opacity: 0;
}
svg > foreignObject {
    display:none;
    opacity: 0;
    pointer-events: none;
}
svg > rect {
    fill: var(--dark-color);
    opacity: 0;
    transition: opacity 300ms;
    pointer-events: none;
}
svg > rect:target {
    opacity: 0.66;
    pointer-events: auto;
}
svg > rect:target + foreignObject {
    display: block;
    opacity: 1;
    pointer-events: auto;
    position: relative;
}
/*svg > rect:target + foreignObject .popup {
    opacity: 1;
}*/
svg > rect:target + foreignObject ~ a {
    pointer-events: none;
}
svg > rect:not(:target) ~ a:hover polygon {
    fill:var(--dark-color);
    fill-opacity: .33;
    stroke-opacity: 1;
}
svg > rect:target + foreignObject + a polygon {
    fill-opacity: 0!important;
    stroke-opacity: 1;
}
/* ... */

